--- a/app/ToDO.txt
+++ b/app/ToDO.txt
@@ -1,27 +1,31 @@
 TODO Public tasks
 1- store images                                                                             DONE
-2- Add To Cart
+2- Add To Cart                                                                              DONE
 3- show images in all project
-4- in top bar my favorite product
+4- in top bar my favorite product                                                           DONE
 
 Index Page ==> 1- carousel images
-               2- add to cart
+               2- add to cart                                                               DONE
                3- product image
                4- category image
 
-Detail Page ==> 1- add to cart
+Detail Page ==> 1- add to cart                                                              TODO
                 2- product images in carousel
                 3- U may also like section
 
 
-Shop Page   ==> 1- add to cart
+Shop Page   ==> 1- add to cart                                                              DONE
                 2- multi select in filters['color', 'size', 'price']
                 3- form request with exist query string in filters and search
                 4- composite primary key with three column ['product_id', 'size', 'color'] at product_attributes        DONE
                 5- product image
                 6- sorted by popularity and Best Rating
 
-SoppingCart Page ==> All
+ShoppingCart Page ==> 1- Quantity according to the selected color
+                      2- total multiply quantity to price
+                      3- product image in cart
+
+Check out Page ==> ALL
 
 TODO tasks for 25/5/2022
 1- create category products query string filter in shop page                                DONE
